# rpg

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.py  demo.map  test.py  two.map
src/: colors.h  editor.c  main.c  python.c  python.h  rpg.c  rpg.h  sprite.c  sprite.h  textbox.c  textbox.h
